6/8/21 - 4pm update;
- intialized things and got things setup. 


6/9 - 1pm update;
- have heroes displayed! but not in a grid. 

6/9 - 3pm update;
- have individual hero data displayed on page 'localhost:port/1 = antimage'
- url starts with hero ID rather than array index 0, hero ID 24 doesnt exist

6/9 -5pm update;
-gotta build the team to display at the bottom? have to fix the grid
-kind of lost.


6/10 - 12pm update; 
- fixed /:id page to match with hero ID, so you can search for heroes specifically... maybe when you click into the hero for more detail???
- added a sequelize database, and seed files to get the heroes into a table... need to figure out many:many situation
- still no progress on creating an array that contains heroes based on hero_id.



6/10 - 5pm update; 
- not sure where to go, 
route pages need to be made for all the RESTful situation (confused)
a little lost on goals but also not sure how to achieve goals? vision isnt clear to begin with possibly.

added event click listener, similar to tic tac toe to add heroes into an array and make a state of "hero comp".
need to figure out how to move information from click to array as an element? maybe its an .then function???

6/10 - 930pm update; 
- added logic
- chekc notes for next steps


6/11 - 5pm update;
added input form for team name,
added team view page,

names are being moved through the input form for DB.CREATE but need to figure out how to do multiple inputs into 1 database.
once thats done, project should be mostly on track to finish.
reference lines below.
routes>teams - line 22 into line 40
views>index.ejs line 99




6/12 - 8pm update;

check models>index.js??? below line 36
created controllers and kind of understand what theyre doing but not sure.

stuck once again.